--- a/index.html
+++ b/index.html
@@ -164,13 +164,103 @@
      </section>
 
      <!-- MY DOMAIN SECTION -->
-     <section id="services" class="our-services ">
+     <section id="services" class="services">
         <div class="container mt-5">
             <div class="row text-center mb-5">
                 <h1 class="display-3 fw-bold ">My Domains</h1>
-                <div class="heading-line mb-5"></div>
+                <div class="heading-line mb-1"></div>
             </div>
         </div>
+
+        <!-- <div class="container">
+          <div class="row pt-2 pb-2 mt-5 mb-3">
+            <div class="col-md-6 border-right">
+            <div class="bg-white p-3">
+              <h2 class="fw-bold text-capitalize text-center"> 
+                I consider one should never stop learning and should keep on trying different domains and then should choose what excites them the most
+              </h2>
+            </div>
+          </div>
+            <div class="col-md-6">
+              <div class="bg-white p-4 text-start">
+                <p class="fw-light">
+                  Here are some of the domains I love wworking with, I tould not call myself expert in all of these but I am still working hard daily to master them all with Perfection.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+
+
+        <!-- Start the content for the services -->
+
+        <div class="container">
+          <!-- START THE WEB DEVELOPMENT CONTENT  -->
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon d-block fas fa-paper-plane"></div>
+                <h3 class="display-3--title mt-1">Web Development</h3>
+                <p class="lh-lg">
+                  Building state-of-the-art, easy to use, user-friendly websites is truly a passion of mine. In addition to my knowledge base, I actively seek out new technologies and stay up-to-date on industry trends and advancements. This has allowed me to stay ahead of the curve and deliver exceptional work. <!--to all of my employers, including those I've worked for on a project basis.--> 
+                </p>
+                <button type="button" class="rounded-pill btn-rounded border-primary"><span><i class="fas fa-arrow-right"></i></span>Learn-more</button>
+              </div>
+            </div>
+              <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4 text-end">
+                <div class="services__pic">
+                  <img src="images/domain/Web development _Isometric.png" alt="DevOps Image" class="img-fluid">
+                </div>
+              </div>
+            </div>
+             <!-- START THE DEVOPS CONTENT -->
+             <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4 text-start">
+                <div class="services__pic">
+                  <img src="images/domain/Code Development _Two Color.png" alt="DevOps Image" class="img-fluid">
+                </div>
+              </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon d-block fas fa-code"></div>
+                <h3 class="display-3--title mt-1">DevOps</h3>
+                <p class="lh-lg">
+                  DevOps is a set of practices, tools, and a cultural philosophy that automate and integrate the processes between software development and IT teams. It emphasizes team empowerment, cross-team communication and collaboration, and technology automation. I have been following and learning DevOps practices for a long time now and it thrills me a lot. 
+                </p>
+                <button type="button" class="rounded-pill btn-rounded border-primary"><span><i class="fas fa-arrow-right"></i></span>Learn-more</button>
+              </div>
+            </div>
+          </div>
+         <!-- START THE JAVA DEVELOMENT CONTENT -->
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4">
+              <div class="services__content">
+                <div class="icon d-block fas fa-code"></div>
+                <h3 class="display-3--title mt-1">Java Development</h3>
+                <p class="lh-lg">
+                  Java is my faviourate Programming language. I tend to use it on daily basis for problem solving and working on my Data Structures and Algorith Skills to master Java language and seek great opportunities in Software Development.
+                </p>
+                <button type="button" class="rounded-pill btn-rounded border-primary"><span><i class="fas fa-arrow-right"></i></span>Learn-more</button>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 colxs-12 services mt-4 text-end">
+              <div class="services__pic">
+                <img src="images/domain/Java_Monochromatic.png" alt="DevOps Image" class="img-fluid">
+              </div>
+            </div>
+          </div> 
+        </div>
+     </section>
+
+     <!-- TESTIMONIALS SECTION -->
+     <section id="testimonials" class="testimonials">
+      <div class="container">
+        <div class="row text-center text-white">
+          <h1 class="display-3 fw-bold">Testimonials</h1>
+          <hr style="width:100px;height:3px;" class="mx-auto">
+        </div>
+      </div>
      </section>
     
 <script src="/assets/js/bootstrap.bundle.js"></script>
