--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
       <img src="images/portfoli.jpeg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
       <div class="portfolio-info">
         <div class="caption">
-          <h4>project name goes here 1</h4>
-          <p>category project</p>
+          <h4>Portfolio webpage</h4>
+          <p>made using Bootstrap</p>
         </div>
       </div>
     </div>
@@ -485,8 +485,8 @@
       <img src="images/scorpio.jpeg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
       <div class="portfolio-info">
         <div class="caption">
-          <h4>project name goes here 2</h4>
-          <p>category project</p>
+          <h4>Bootstrap Project</h4>
+          <p>car info</p>
         </div>
       </div>
     </div>
